--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.62MB/s(Youtube:不良林), server: zh01lv5uk01.feiguayun.xyz, port: 35087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
   - {name: 🇯🇵 日本-12.74MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-940.5KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-8.81MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.88MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.35MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇳🇱 荷兰-952.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇷🇺 俄罗斯联邦-3.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-940.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.81MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.88MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.35MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
