--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.59MB/s(Youtube:不良林), server: 213.183.51.172, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-16.80MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-424.4KB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: zh01lv3us03.feiguayun.xyz, port: 50001, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
-  - {name: 🇳🇱 荷兰-1.45MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-1.36MB/s(Youtube:不良林), server: 213.183.51.172, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.38, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-20.17MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-1.44MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-952.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 波兰-950.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇸🇬 新加坡-2.23MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.66MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 波兰-1.71MB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-16.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-952.8KB/s(Youtube:不良林)
-      - 波兰-950.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.23MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 波兰-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
