--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-1.36MB/s(Youtube:不良林), server: 213.183.51.172, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.38, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-20.17MB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林), server: 213.183.53.200, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇳🇱 荷兰-1.44MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-1.66MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇳🇱 荷兰-920.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 波兰-1.71MB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.48MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
