--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林), server: 213.183.53.200, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇳🇱 荷兰-2.15MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.38, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: 185.167.116.38, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-1.39MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
   - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇳🇱 荷兰-920.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-175.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
